--- a/trivago-clone/public/manifest.json
+++ b/trivago-clone/public/manifest.json
@@ -1,6 +1,6 @@
 {
-    "short_name": "React App",
-    "name": "Create React App Sample",
+    "short_name": "Trivago Clone",
+    "name": "Create Trivago Website Sample",
     "icons": [
       {
         "src": "favicon.ico",
